[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgescaler"
description = "Tool to automagically save scikit-learn scaler properties to a portable, readable format."
readme = "README.md"
authors = [{name = "David John Gagne", email = "dgagne@ucar.edu"}]
dynamic = ["version"]
license = {text = "MIT"}
keywords = ["machine learning"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",


]
dependencies = [
    "scikit-learn>=1.0",
    "numpy<2.4",
    "pandas<3",
    "crick",
    "scipy",
    "xarray",
    "numba",
    "sphinx",
    "sphinx-book-theme",
    "setuptools_scm",
    "setuptools"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/NCAR/bridgescaler"

[tool.setuptools]
packages = ["bridgescaler"]
include-package-data = true
zip-safe = true

[tool.setuptools_scm]
version_file = "bridgescaler/_version.py"