[metadata]
name = bridgescaler
description = Tool to automagically save scikit-learn scaler properties to a portable, readable format.
long_description = file: README.md
long_description_content_type = text/markdown
author = David John Gagne
author_email = dgagne@ucar.edu
version = file: bridgescaler/VERSION
license = MIT
license_file = LICENSE
platform = any
keywords = machine learning
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/NCAR/bridgescaler

[options]
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools
python_requires = >=3.7
install_requires =
    scikit-learn>=1.0
    numpy
    pandas
    pytdigest

